<?xml version="1.0" encoding="UTF-8"?>
<package format="3">
  <name>work_experience_project</name>
  <version>0.0.1</version>
  <description>ROS2 project for work experience</description>
  <maintainer email="hansollee333@gmail.com">hansollee</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>tf2</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>